--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for AnyEvent-HTTP-Message
 
 {{$NEXT}}
 
+  - Fix module name typo when parse_args throws an error.
+    (While "Crap" would be an appropriate name, it's actually "Carp".)
+
 0.100     2012-04-19T01:28:25Z
 
   - Initial release
