--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for AnyEvent-HTTP-Message
 
   - Fix error messages when parse_args gets the wrong number of arguments.
 
+  - Fix module name copy/paste error in Response Synopsis pod
+
 0.100     2012-04-19T01:28:25Z
 
   - Initial release
