--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for AnyEvent-HTTP-Message
 
 {{$NEXT}}
 
+  - For consistency/clarity/simplicity $request->params
+    no longer includes 'body' and 'headers'.  Use the accessor methods.
+    'params' is now only used for the extra AnyEvent::HTTP (user-agent) params.
+
   - Enable conversion from/to HTTP::Message objects
 
   - Fix error messages when parse_args gets the wrong number of arguments.
