--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for AnyEvent-HTTP-Message
   - For consistency/clarity/simplicity $request->params
     no longer includes 'body' and 'headers'.  Use the accessor methods.
     'params' is now only used for the extra AnyEvent::HTTP (user-agent) params.
+  - $request->body will default to an empty string if not defined.
 
   - Enable conversion from/to HTTP::Message objects
 
