--- a/Changes
+++ b/Changes
@@ -11,7 +11,7 @@ Revision history for AnyEvent-HTTP-Message
 
   - Fix error messages when parse_args gets the wrong number of arguments.
 
-  - Fix module name copy/paste error in Response Synopsis pod
+  - Reorganize documentation for clarity/simplicity (hopefully).
 
 0.100     2012-04-19T01:28:25Z
 
