--- a/Changes
+++ b/Changes
@@ -2,15 +2,19 @@ Revision history for AnyEvent-HTTP-Message
 
 {{$NEXT}}
 
+  [Backwards Incompatible Changes]
   - For consistency/clarity/simplicity $request->params
     no longer includes 'body' and 'headers'.  Use the accessor methods.
     'params' is now only used for the extra AnyEvent::HTTP (user-agent) params.
   - $request->body will default to an empty string if not defined.
 
+  [Enhancements]
   - Enable conversion from/to HTTP::Message objects
 
+  [Fixes]
   - Fix error messages when parse_args gets the wrong number of arguments.
 
+  [Documentation]
   - Reorganize documentation for clarity/simplicity (hopefully).
 
 0.100     2012-04-19T01:28:25Z
