Croak if arguments are passed to $req->cb()
it returns the coderef, it doesn't call it

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for AnyEvent-HTTP-Message
 
 {{$NEXT}}
 
+  - Throw error if arguments are passed to $req->cb() to avoid confusion.
+
 0.300     2012-04-22T22:32:36Z
 
   [Backwards Incompatible Changes]
